# sentence-similarity

./: .gitignore  README.md  benchmark.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
sentence-similarity/: __init__.py  sentence_similarity.py
sentence_similarity/: __init__.py  sentence_similarity.py  translator.py
src/: __init__.py  sentence_similarity.py  translator.py  vocab.py
test/: test_sentence_similarity.py  test_vocab.py
tests/: test_sentence_similarity.py  test_translator.py
