[tool.poetry]
name = "sentence-similarity"
version = "1.1.0"
description = "Algorithm for fast comparison of string sentences"
authors = ["Luc Heuff <lucheuff@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sentence_similarity"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.1.0"
strsimpy = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
hypothesis = "^6.84.3"
neovim = "^0.3.1"
ruff = "^0.2.2"
ipython = "^8.21.0"
poetry2setup = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
