[project]
name = "sentence-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "strsimpy>=0.2.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.4",
    "hypothesis>=6.130.7",
    "pytest>=8.3.5",
]
